# ITMO

.github/workflows/: cmake.yml
sem_1/: README.md
sem_1/Algo/lab1/: A.h  aPlusbb.h  main.cpp  smallSort.h  sortLand.h  turtle.h
sem_1/Algo/lab2/: main.cpp  quickSort.h  task_A.cpp  task_B.cpp  task_B.h  task_C.cpp  task_D.cpp  task_E.cpp
sem_1/Algo/lab3/: task_A.cpp  task_B.cpp  task_C.cpp  task_D.cpp  task_Tmp.cpp
sem_1/Algo/lab4/: lab_A.cpp  lab_B.cpp  lab_C.cpp  lab_D.cpp  lab_E.cpp  lab_F.cpp
sem_1/Algo/lab5/: lab_A.cpp  lab_B.cpp  lab_C.cpp  lab_D.cpp
sem_1/Algo/lab6/: lab_A.cpp  lab_B.cpp  lab_C.cpp  lab_D.cpp  tmp_tmp.cpp
sem_1/Algo/lab7/: lab_A.cpp  lab_A_0.cpp  lab_B.cpp  lab_C.cpp  lab_D.cpp  lab_E.cpp  lab_tmp.cpp
sem_1/C/: README.md
sem_1/C/lab1/: lab1.md  main.c
sem_1/C/lab2/: lab2.md  main.c  uint1024_t.c  uint1024_t.h
sem_1/C/lab3/: lab3.md
sem_1/C/lab4/: CMakeLists.txt  lab4.md  main.c
sem_1/C/lab5/: lab5.md  main.c
sem_1/Digital_Culture/lab1/: DC.md  ЦК0.docx  ЦК1.docx
sem_1/Digital_Culture/lab2/: ЦК2.docx
sem_1/Digital_Culture/lab3/: ЦК3.docx
sem_1/Digital_Culture/lab4/: ЦК4.docx
sem_2/Algrorithms/lab10/: A.cpp  B.cpp  C1.cpp
sem_2/Algrorithms/lab11/: A.cpp
sem_2/Algrorithms/lab13/: A.cpp  B.cpp  C.cpp  D.cpp  E_.cpp
sem_2/Algrorithms/lab8/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F2.cpp
sem_2/CPP/lab_6/: CMakeLists.txt  Polynomial.h  main.cpp  tests.cpp
sem_2/lab_1/: Polynomial.cpp  Polynomial.h  main.cpp
sem_2/lab_2/: Test_Widget3.pro  mainwindow.cpp  mainwindow.ui  module.cpp  module.h
(+37 files in other folders)
